--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   # schedule/cron means "on a set schedule"
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 2 * * *'
 jobs:
   scrape:
     # For some reason, we run love versions of linux
