Disable scrape.yml

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,8 +6,8 @@ on:
   # workflow_dispatch means "I can click a button and force it to run"
   workflow_dispatch:
   # schedule/cron means "on a set schedule"
-  schedule:
-    - cron: '0 2 * * *'
+  #schedule:
+    #- cron: '0 2 * * *'
 jobs:
   scrape:
     # For some reason, we run love versions of linux
